# Fast-API-Snipet

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml
src/: database.py  main.py
src/models/: __init__.py  file_document.py
src/providers/: openai_client.py  pinecone.py
src/routers/: document_api.py  healthcheck_api.py
src/types/: document_response_type.py  pipecode_data_types.py
src/utils/: config.py  doc_utils.py  ocr_utils.py
